0.1.11

2012-11-21  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed hang on remote SMTP disconnect if libcurl is not used
	* quickmail application now returns nonzero exit code on error
	* quickmail_set_body result is no longer const and caller must free()

0.1.10

2012-11-13  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* don't print to debuglog if it is NULL in smtpsocket.c
	* include arpa/inet.h in smtpsocket.h for non-Windows systems

0.1.9

2012-11-11  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* quickmail application now returns nonzero exit code on error
	* CURL_STATICLIB is defined when building static libquickmail.a

0.1.8

2012-11-10  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* now includes quickmail program to send mail from command line
	* added quickmail_remove_attachment: remove attachment
	* added quickmail_list_attachments: list attachments
	* added quickmail_set_from: get from address
	* added quickmail_get_subject: get subject
  * quickmail_set_subject now sets the subject instead of from address

0.1.7

2012-11-03  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added quickmail_initialize: initialize library
	* added quickmail_add_attachment_memory: send attachment from memory
	* added quickmail_add_attachment_custom: send custom data attachment
	* added quickmail_add_header: add custom mail header
	* fixed multiple To/Cc recipients are now joined in one header line

0.1.6

2012-10-28  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixes for building libquickmaillight on systems other than Windows

0.1.5

2012-10-27  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* new library libquickmaillight added with SMTP transport without libcurl
	* added angle brackets around RCPT TO and MAIL FROM parameters

0.1.4

2012-09-20  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed timezone issue by adding " +0000" to date header
	
0.1.3
