@@ -9,8 +9,8 @@
 		<Project filename="test_libquickmail_shared.cbp">
 			<Depends filename="libquickmail_shared.cbp" />
 		</Project>
-		<Project filename="test.cbp" />
+		<Project filename="test.cbp" active="1" />
 		<Project filename="test_nocurl.cbp" />
-		<Project filename="quickmail_static.cbp" active="1" />
+		<Project filename="quickmail_static.cbp" />
 	</Workspace>
 </CodeBlocks_workspace_file>
